<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingLeft="16dp"
    android:paddingRight="90dp"
    android:orientation="horizontal" >


    <CheckBox android:id="@+id/checkbox_runner_selected"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:paddingRight="10dp"
        android:focusable="false"
        />

    <TextView
        android:id="@+id/txt_runner_weight"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:paddingRight="8dp"
        android:textColor="@android:color/darker_gray"
        android:text="@string/weight"
        />

    <TextView
        android:id="@+id/txt_runner_first_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:paddingRight="3dp"
        android:text="@string/first_name"
        />

    <TextView
        android:id="@+id/txt_runner_last_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/last_name"
        />

</LinearLayout>
