<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".activities.AddRunnerActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:padding="5dp">

        <!-- Nouvelle course : -->
        <TextView
            android:id="@+id/new_runner_title"
            android:layout_height="wrap_content"
            android:layout_width="fill_parent"
            android:padding="5dp"
            android:layout_weight="0"
            android:gravity="center"
            android:text="@string/new_runner_title"
            android:textAppearance="?android:attr/textAppearanceLarge"/>

        <EditText
            android:id="@+id/txt_create_runner_first_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/runner_first_name"
            android:layout_marginTop="24dp"
            android:inputType="text"
            android:textAppearance="?android:attr/textAppearance"
            android:textColor="@android:color/black" />

        <EditText
            android:id="@+id/txt_create_runner_last_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"

            android:layout_marginTop="8dp"
            android:hint="@string/runner_last_name"
            android:inputType="text"
            android:lines="2"
            android:maxLines="2"
            android:textAppearance="?android:attr/textAppearance"
            android:textColor="@android:color/black" />

        <EditText
            android:id="@+id/txt_create_runner_weight"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:hint="@string/runner_weight"
            android:inputType="numberDecimal"
            android:textAppearance="?android:attr/textAppearance"
            android:textColor="@android:color/black" />


        <Button
            android:id="@+id/btn_add_runner"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:gravity="center_vertical|start"
            android:layout_gravity="start"
            android:paddingBottom="2dp"
            android:paddingLeft="12dp"
            android:paddingRight="12dp"
            android:paddingTop="2dp"
            android:drawableEnd="@drawable/ic_add_runner"
            android:text="@string/add_runner"
            android:textAppearance="?android:attr/textAppearanceMedium" />

    </LinearLayout>

</android.support.constraint.ConstraintLayout>



